# cc-context-stats

./: .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  README.md  install  install.sh  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
config/: settings-node.json  settings-python.json
docs/: token-graph.md
scripts/: context-stats.sh  statusline-full.sh  statusline-git.sh  statusline-minimal.sh  statusline-original.sh  statusline.js  statusline.py  token-graph.sh
src/claude_statusline/: __init__.py
src/claude_statusline/cli/: context_stats.py
src/claude_statusline/graphs/: renderer.py
tests/bash/: test_statusline_full.bats
tests/fixtures/json/: high_usage.json  low_usage.json  medium_usage.json  valid_full.json  valid_minimal.json
tests/node/: statusline.test.js
tests/python/: conftest.py  test_statusline.py
